build.log
warning: unused import: `anyhow`
 --> src\compiler.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::process::Command`
 --> src\compiler.rs:8:5
  |
8 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Param`
 --> src\languages\python\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `Param`
 --> src\languages\rust\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `FunctionSig`
 --> src\parser.rs:1:20
  |
1 | use crate::types::{FunctionSig, Param, WitType};
  |                    ^^^^^^^^^^^

warning: unused import: `FunctionSig`
 --> src\wit_gen.rs:5:20
  |
5 | use crate::types::{FunctionSig, WitType};
  |                    ^^^^^^^^^^^

warning: unused variable: `i`
  --> src\compiler.rs:28:10
   |
28 |     for (i, block) in parsed.blocks.iter().enumerate...
   |          ^ help: if this is intentional, prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `opts`
  --> src\compiler.rs:40:38
   |
40 | ...les: &[Vec<u8>], opts: &CompileOptions) -> Result...
   |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_opts`

warning: `polyglot` (lib) generated 8 warnings (run `cargo fix --lib -p polyglot` to apply 8 suggestions)
warning: `polyglot` (lib test) generated 8 warnings (8 duplicates)
   Compiling polyglot v0.1.0 (C:\Users\adria\Downloads\pyrs polygot\pyrs)
error[E0277]: the trait bound `CompileOptions: Default` is not satisfied
  --> src\main.rs:63:19
   |
63 |                 ..Default::default()
   |                   ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `CompileOptions`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `polyglot` (bin "polyglot" test) due to 1 previous error
